<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity Strings -->
    <string name="app_name">Basketball Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="clipboard">Clipboard</string>
    <string name="practice_planner">Practice Planner</string>
    <string name="stat_sheet">Statistics Sheet</string>

    <!-- Practice Planner Strings -->
    <string name="title_activity_practice_planner">Basketball Assistant</string>
    <string name="practice_title_hint">Name Your Practice</string>
    <string name="practice_hint">Edit your practice here.</string>
    <string name="practice_title">Practice Planner</string>
    <string name="saveAs_practice">Save As</string>
    <string name="save_practice">Save</string>
    <string name="open_practice">Open</string>
    <string name="start_time_text"><u>Time:</u></string>
    <string name="start_time_hint">Start Time</string>
    <string name="duration_text"><u>Duration (minutes):</u></string>
    <string name="duration_hint">Duration</string>
    <string name="drill"><u>Drill:</u></string>
    <string name="drill_hint">Enter your drill here!</string>
    <string name="add_drill">+ Add Drill</string>

    <!-- Clipboard Strings -->
    <string name="title_activity_clipboard">Basketball Assistant</string>
    <string name="content_desc">An image of a basketball court.</string>
    <string name="new_clipboard">New</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="eraser">Eraser</string>

    <!-- Stat Sheet Strings -->
    <string name="title_activity_stat_sheet">Basketball Assistant</string>
    <string name="player_header">Player</string>
    <string name="points_header">Points</string>
    <string name="assists_header">Asst.</string>
    <string name="rebs_header">Rebs.</string>
    <string name="steals_header">Steals</string>
    <string name="player_hint">Player Name</string>
    <string name="game_name">Game Name:</string>
    <string name="game_name_hint">A specific name for this game</string>
    <string name="team_name"><u>Team Name:</u></string>
    <string name="team_name_hint">Your Team\'s Name</string>
    <string name="game_date">Date:</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="open_statSheet">Open Stat Sheet</string>
    <string name="save_statSheet">Save</string>
    <string name="delete_stat_sheet">Delete</string>
    <string name="stats_summary_menu_item">Stat Cruncher</string>

    <!-- Practice Hub Strings -->
    <string name="delete_practice">Delete</string>
    <string name="new_practice">New</string>
    <string name="title_activity_practice_hub">Basketball Assistant</string>
    <string name="practice_hub_header"><u>Practice Hub</u></string>

    <!-- Stat Sheet Hub Strings -->
    <string name="title_activity_open_stat_sheet">Basketball Assistant</string>
    <string name="open_stat_sheet_header"><u>Statistics Sheet Hub</u></string>
    <string name="new_stat_sheet">New</string>

    <!-- Stat Summary Strings -->
    <string name="title_activity_stats_summary">Basketball Assistant</string>
    <string name="stats_summary_header"><u>Stat Cruncher</u></string>
    <string name="player_or_team_prompt">Choose Player or Team</string>
    <string name="specific_player_prompt">Choose Player</string>
    <string name="specific_team_prompt">Choose Team</string>

    <string-array name="player_or_team">
        <item>Player</item>
        <item>Team</item>
    </string-array>

    <string name="stats_summary_button_label">Submit</string>

</resources>