<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_newPractice"
        android:orderInCategory="200"
        android:title="@string/new_practice"/>
    <item
        android:id="@+id/action_deletePractice"
        android:icon="@drawable/content_discard"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/delete_practice"/>
    <item
        android:id="@+id/action_savePractice"
        android:icon="@drawable/content_save"
        android:orderInCategory="400"
        android:showAsAction="ifRoom"
        android:title="@string/save_practice"/>

</menu>