<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:scrollbars="vertical" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />
            </TableRow>

            <!--
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/addDrillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addDrill"
                android:text="@string/add_drill" />
        </TableRow>
            -->

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_time_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/drillText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/drill"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/durationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/duration_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <!-- Start Time -->

                <EditText
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/start_time_hint"
                    android:inputType="time"
                    android:textColor="#000000" >

                    <requestFocus />
                </EditText>

                <!-- Drill -->

                <EditText
                    android:id="@+id/drill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/drill_hint"
                    android:textColor="#000000" />

                <!-- Duration -->

                <EditText
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/duration_hint"
                    android:inputType="time"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addDrillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDrill"
            android:text="@string/add_drill"
            android:background="#F87431"
            android:layout_weight="1"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>